--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -23,8 +23,11 @@
     display: flex;
     align-items: center;
     font-weight: bold;
+    p {
+      transition: color 250ms ease-in-out;
+    }
     p.active {
-      color: #0088ff;
+      color: #08f;
     }
   }
 }
