--- a/src/app/cobo/cobo.component.html
+++ b/src/app/cobo/cobo.component.html
@@ -1,3 +1,28 @@
+<div id='mainSection'>
+  <img src='/assets/images/cobo.png'>
+</div>
 <div class='section'>
-  <h1>CoBo</h1>
+  <div style='padding: 32px; font-size: 18px;'>First official product launched by VirtuNova</div>
+  <div>Users can advertise their old/unused books for reselling helping those in need</div>
+  <div>This app is created for students looking for second books and those who are willing to sell their old ones, without much hastle</div>
+  <div style='padding: 32px;'></div>
+  <div>We at VirtuNova wanted to reduce the amount of books and paper waster and rather find a solution to reuse it.</div>
+  <div>This also create oppurtunities for users to make a few bucks!</div>
+</div>
+<div class='section'>
+  <div style='display: flex; flex-direction: row; justify-content: space-between; align-items: center'>
+    <img src='/assets/images/cobo-logo.png' style="width: 256px; margin: 32px;">
+    <div style='display: flex; flex-direction: column; margin: 32px'>
+      <h3>Benefits</h3>
+      <ul>
+        <li>Reduces paper waste</li>
+        <li>Easy way to sell study materials</li>
+        <li>Earn money</li>
+      </ul>
+      <div style='padding: 32px;'></div>
+      <div style='align-self: flex-end' class='button' onclick="window.open('', '_blank')">
+        Download
+      </div>
+    </div>
+  </div>
 </div>
