--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,28 @@
+<!--<img class='background' src='assets/images/background.svg'>-->
+<h1>VirtuNova</h1>
+<div class='main-section'>
+  <div class='quote'>&ldquo;The difference between who you are and who you want to be</div>
+  <div class='quote'>is what <s>you</s> we do&rdquo;</div>
+</div>
 <div class='section'>
-  <h1>Virtu Nova</h1>
+  <ul>
+    <li>Need a boost to your business goals?</li>
+    <li>Need a helping hand to speed up your daily tasks?</li>
+    <li>Have ideas but doesn't have the skills to impliment them?</li>
+  </ul>
+  <div>We at VirtuNova have the complete virtual solution to all your needs</div>
+  <br/>
+</div>
+<div class='section'>
+  <h2>Services provided by us</h2>
+  <div class='cards'>
+    <div class='card'>
+      <img style='width: 90%' src='/assets/images/web-app.png'>
+      Web App
+    </div>
+    <div class='card'>
+      <img style='width: 90%' src='/assets/images/mobile-app.jpg'>
+      Mobile App
+    </div>
+  </div>
 </div>
