--- a/src/app/cobo/cobo.component.scss
+++ b/src/app/cobo/cobo.component.scss
@@ -3,6 +3,71 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 100%;
+  width: calc(90vw - 64px);
+  color: #757575;
+  box-shadow: #00000033 0px 0px 4px 4px;
+  border-radius: 8px;
+  padding: 64px 32px;
+  margin: 16px 64px;
+  background-color: #ffffff;
+  .cards {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    .card {
+      width: 200px;
+      height: 220px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      box-shadow: #00000033 0px 0px 4px 4px;
+      margin: 48px;
+      border-radius: 4px;
+    }
+  }
+}
+#mainSection {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+  color: #fff;
+}
+:host {
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  background: url('/assets/images/background.png') repeat-y 50% 0;
+}
+.button {
+  background-color: #08f;
+  border-radius: 4px;
+  color: #fff;
+  padding: 12px;
+  font-weight: bold;
+  position: relative;
+}
+.button::before {
+  content: ' ';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  box-shadow: #00000033 0 0 4px 2px;
+  opacity: 0;
+  transition: opacity 250ms ease-out;
+  border-radius: 4px;
+}
+.button:hover::before,
+.button:focus:before, {
+  opacity: 1;
+  cursor: pointer;
 }
