--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -1,11 +1,15 @@
-.section {
+.main-section {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100vw;
   height: 100vh;
+  width: 100vw;
+}
+h1 {
+	color: #08f;
 }
 :host {
-	width: 100vw;
+	width: 100vw
 }
+
