--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-navbar [links]="links"></app-navbar>
 <div [@routeAnimations]="prepareRoute(outlet)" >
-  <router-outlet #outlet="outlet"></router-outlet>
+  <router-outlet #outlet="outlet" (activate)="onActivate($event)"></router-outlet>
 </div>
