--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -1,10 +1,13 @@
-.section {
+.main-section {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100vw;
   height: 100vh;
+  width: 100vw;
+}
+h1 {
+	color: #08f;
 }
 :host {
 	width: 100vw;
