--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -12,37 +12,29 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  background: url('/assets/images/background.png') repeat-y 0 0;
 }
 .main-section {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 90%;
-  height: 100%;
-  padding-bottom: 64px;
+  height: 100vh;
+  width: 100vw;
 }
 .section {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 90%;
-  height: 100%;
+  width: calc(90vw - 64px);
   color: #757575;
   box-shadow: #00000033 0px 0px 4px 4px;
   border-radius: 8px;
-  padding-top: 64px;
-  padding-bottom: 64px;
+  padding: 64px 32px;
   margin: 16px 64px;
   background-color: #ffffff;
   ul {
-    font-size: 24px;
-  }
-  br {
-    width: 32px;
-    height: 32px;
+    font-size: 18px;
   }
   .cards {
     display: flex;
@@ -65,8 +57,8 @@
 }
 h1 {
   color: #0088ff;
-  padding: 64px;
-  font-size: 100px;
+  padding: 32px;
+  font-size: 64px;
   font-weight: 144;
 }
 .quote {
