removed about us from links and added contact info

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,3 +1,5 @@
 <div class='main-section'>
-	<h1>Contact</h1>
+  <h1>Contact</h1>
+  <div>Email : virtunovasolutions@gmail.com</div>
+  <div>Phone : +91 94961 35602</div>
 </div>
