--- a/src/app/cobo/cobo.component.html
+++ b/src/app/cobo/cobo.component.html
@@ -20,7 +20,7 @@
         <li>Earn money</li>
       </ul>
       <div style='padding: 32px;'></div>
-      <div style='align-self: flex-end' class='button' onclick="window.open('', '_blank')">
+      <div style='align-self: flex-end' class='button' onclick="window.open('https://drive.google.com/file/d/1w-zSo9-cdRg4o9TC78FEDTybYJutwOZh/view?usp=sharing', '_blank')">
         Download
       </div>
     </div>
